rook/objectstorage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-store
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  tls:
  - hosts:
    - '*.slimemoss.com'
    secretName: slimemoss-tls-secret
  rules:
    - host: my-store.slimemoss.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-my-store
                port:
                  number: 80
